--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,5 +6,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".SplashActivity">
+    <ImageView android:layout_width="200dp"
+               android:layout_height="200dp"
+               android:background="@drawable/ic_launcher_background"
+               app:layout_constraintEnd_toEndOf="parent"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintTop_toTopOf="parent"
+               app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/imageView"/>
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+              android:gravity="center_horizontal"
+              android:text="@string/tv_text_main"
+              android:textColor="@color/splash_text_color"
+              android:textSize="30sp"
+
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/imageView"
+    app:layout_constraintVertical_bias="0"/>
 
 </android.support.constraint.ConstraintLayout>
