--- a/app/src/main/res/layout/recyclerview_row_table.xml
+++ b/app/src/main/res/layout/recyclerview_row_table.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -16,24 +16,30 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="8dp"/>
     <TextView
             android:id="@+id/tvFilmName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="12sp" android:textColor="@color/black"
+            android:textSize="16sp" android:textColor="@color/black"
             android:gravity="center_horizontal" tools:layout_conversion_absoluteHeight="60dp"
             tools:layout_conversion_absoluteWidth="112dp"
-            app:layout_constraintStart_toEndOf="@+id/logoImageView" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintStart_toEndOf="@+id/logoImageView"
+            app:layout_constraintTop_toTopOf="@+id/logoImageView"
+            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"/>
     <TextView
             android:id="@+id/tvDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:textSize="12sp" android:textColor="@color/black"
-            android:gravity="center_horizontal" tools:layout_conversion_absoluteHeight="60dp"
+            android:gravity="fill" tools:layout_conversion_absoluteHeight="60dp"
             tools:layout_conversion_absoluteWidth="112dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/logoImageView"
             app:layout_constraintTop_toBottomOf="@+id/tvFilmName"
-            app:layout_constraintStart_toStartOf="@+id/tvFilmName" app:layout_constraintEnd_toEndOf="@+id/tvFilmName"/>
+            android:layout_marginStart="8dp"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
