--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,14 +8,14 @@
         tools:context=".SplashActivity">
     <ImageView android:layout_width="200dp"
                android:layout_height="200dp"
-               android:background="@drawable/ic_launcher_background"
+               android:background="@mipmap/image_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/imageView"/>
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:gravity="center_horizontal"
-              android:text="@string/tv_text_main"
+              android:text="@string/app_name"
               android:textColor="@color/splash_text_color"
               android:textSize="30sp"
 
