--- a/app/src/main/res/layout/recyclerview_row_table.xml
+++ b/app/src/main/res/layout/recyclerview_row_table.xml
@@ -13,11 +13,10 @@
             android:id="@+id/logoImageView"
             tools:layout_conversion_absoluteHeight="60dp"
             tools:layout_conversion_absoluteWidth="172dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp"/>
+            app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
             android:id="@+id/tvFilmName"
             android:layout_width="0dp"
@@ -27,19 +26,20 @@
             tools:layout_conversion_absoluteWidth="112dp"
             app:layout_constraintStart_toEndOf="@+id/logoImageView"
             app:layout_constraintTop_toTopOf="@+id/logoImageView"
-            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold"
+            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/tvDescription"/>
     <TextView
             android:id="@+id/tvDescription"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:textSize="12sp" android:textColor="@color/black"
-            android:gravity="fill" tools:layout_conversion_absoluteHeight="60dp"
+            android:gravity="center_horizontal|fill_horizontal" tools:layout_conversion_absoluteHeight="60dp"
             tools:layout_conversion_absoluteWidth="112dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/logoImageView"
+            app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
+            app:layout_constraintStart_toEndOf="@+id/logoImageView"
             app:layout_constraintTop_toBottomOf="@+id/tvFilmName"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
